# server_api

./: .coverage  .env  .gitignore  pyproject.toml  requerements.txt  requirements.txt
app/: __init__.py
app/core/: command_manager.py  console_manager.py  di_container_manager.py
app/core/interfaces/: command.py  console.py  di.py
app/core/types/: enums.py  models.py
tests/core/: __init__.py  test_command_manager.py  test_console_manager.py
